# genesis_rl

./: .gitignore  .gitmodules  README.md  pyproject.toml
humanoids/g1/: commands.md  g1_env.py  g1_eval.py  g1_load.py  g1_train.py
