[project]
name = "genesis-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "genesis-world",
    "ipython>=9.8.0",
    "rsl-rl-lib",
]

[tool.uv.workspace]
members = [
    "Genesis",
    "rsl_rl",
]

[tool.uv.sources]
genesis-world = { workspace = true }
rsl-rl-lib = { workspace = true }
