[project]
name = "genesis-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "genesis-world",
    "ipython>=9.8.0",
    "rsl-rl-lib",
    "tensorboard>=2.20.0",
]

[tool.uv.workspace]
members = [
    "rsl_rl",
    "Genesis",
]

[tool.uv.sources]
rsl-rl-lib = { workspace = true }
genesis-world = { workspace = true }
